sandbox/variadic_templates/sandbox/slim/test/tuple.benchmark.mini.time.txt
compiler= clangxx
version={
clang version 3.2 (trunk 165317)
Target: x86_64-unknown-linux-gnu
Thread model: posix
compiler_exe= /home/evansl/download/llvm/svn/build/Release/bin/clang
}
['compiler', 'TUPLE_IMPL', 'TUPLE_SIZE', 'TUPLE_UNROLL_MAX', 'LAST_LESS']
['clangxx', 'bcon12_horizontal', 10, -1, 4]
{
tuple.benchmark.mini.cpp:32:10: fatal error: 'tuple_impl.bcon12_horizontal.hpp' file not found
#include BOOST_PP_STRINGIZE(tuple_impl.TUPLE_IMPL.hpp)
         ^
/usr/include/boost/preprocessor/stringize.hpp:28:38: note: expanded from macro 'BOOST_PP_STRINGIZE'
#    define BOOST_PP_STRINGIZE(text) BOOST_PP_STRINGIZE_I(text)
                                     ^
/usr/include/boost/preprocessor/stringize.hpp:31:37: note: expanded from macro 'BOOST_PP_STRINGIZE_I'
# define BOOST_PP_STRINGIZE_I(text) #text
                                    ^
<scratch space>:2:1: note: expanded from macro '#'
"tuple_impl.bcon12_horizontal.hpp"
^
1 error generated.
Command exited with non-zero status 1
user:0.68 system:0.06 elapsed:0.73
}
['clangxx', 'bcon12_horizontal', 20, -1, 4]
{
tuple.benchmark.mini.cpp:32:10: fatal error: 'tuple_impl.bcon12_horizontal.hpp' file not found
#include BOOST_PP_STRINGIZE(tuple_impl.TUPLE_IMPL.hpp)
         ^
/usr/include/boost/preprocessor/stringize.hpp:28:38: note: expanded from macro 'BOOST_PP_STRINGIZE'
#    define BOOST_PP_STRINGIZE(text) BOOST_PP_STRINGIZE_I(text)
                                     ^
/usr/include/boost/preprocessor/stringize.hpp:31:37: note: expanded from macro 'BOOST_PP_STRINGIZE_I'
# define BOOST_PP_STRINGIZE_I(text) #text
                                    ^
<scratch space>:2:1: note: expanded from macro '#'
"tuple_impl.bcon12_horizontal.hpp"
^
1 error generated.
Command exited with non-zero status 1
user:0.69 system:0.03 elapsed:0.71
}
['clangxx', 'bcon12_horizontal', 30, -1, 4]
{
tuple.benchmark.mini.cpp:32:10: fatal error: 'tuple_impl.bcon12_horizontal.hpp' file not found
#include BOOST_PP_STRINGIZE(tuple_impl.TUPLE_IMPL.hpp)
         ^
/usr/include/boost/preprocessor/stringize.hpp:28:38: note: expanded from macro 'BOOST_PP_STRINGIZE'
#    define BOOST_PP_STRINGIZE(text) BOOST_PP_STRINGIZE_I(text)
                                     ^
/usr/include/boost/preprocessor/stringize.hpp:31:37: note: expanded from macro 'BOOST_PP_STRINGIZE_I'
# define BOOST_PP_STRINGIZE_I(text) #text
                                    ^
<scratch space>:2:1: note: expanded from macro '#'
"tuple_impl.bcon12_horizontal.hpp"
^
1 error generated.
Command exited with non-zero status 1
user:0.66 system:0.06 elapsed:0.71
}
['clangxx', 'bcon12_horizontal', 40, -1, 4]
{
tuple.benchmark.mini.cpp:32:10: fatal error: 'tuple_impl.bcon12_horizontal.hpp' file not found
#include BOOST_PP_STRINGIZE(tuple_impl.TUPLE_IMPL.hpp)
         ^
/usr/include/boost/preprocessor/stringize.hpp:28:38: note: expanded from macro 'BOOST_PP_STRINGIZE'
#    define BOOST_PP_STRINGIZE(text) BOOST_PP_STRINGIZE_I(text)
                                     ^
/usr/include/boost/preprocessor/stringize.hpp:31:37: note: expanded from macro 'BOOST_PP_STRINGIZE_I'
# define BOOST_PP_STRINGIZE_I(text) #text
                                    ^
<scratch space>:2:1: note: expanded from macro '#'
"tuple_impl.bcon12_horizontal.hpp"
^
1 error generated.
Command exited with non-zero status 1
user:0.66 system:0.06 elapsed:0.71
}
